cleanup and alignment fix

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,5 +1,6 @@
 span.category-badge-icon {
 	display: inline-flex;
+	align-self: center;
 	.d-icon {
 	    opacity: 1;
 	    font-size: 1.3em;
